fixed flower not showing worker and tasks

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
 
   celery:
     build: .
-    command: celery -A techNews worker --loglevel=info
+    command: celery -A techNews worker -E --loglevel=info
     volumes:
       - .:/app
     depends_on:
