--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,12 @@ services:
       - redis
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
+  
 
+  selenium:
+    image: selenium/standalone-chrome
+    ports:
+      - "4444:4444"
   redis:
     image: redis:7
     ports:
@@ -27,6 +32,7 @@ services:
     depends_on:
       - django
       - redis
+      - selenium
     environment:
       - CELERY_BROKER_URL=redis://redis:6379/0
 
